Correct contrastes

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     color: #575757!important;
 }
 
+a .style {
+    color:#000000;
+}
+
 nav-toggle:focus .collapse.in {
     display: block;
 }
